@@ -45,7 +45,7 @@ group-weighting from \$[N\_iP\_i(1-P\_i)]\$
 \end{Details}
 %
 \begin{Section}{URLs and emails}
-URLs need to be verbatim:  \url{testit ~^_$#<>|}.
+URLs need to be verbatim:  \url{testit ~^_$\#<>|}.
 
 Markus Kuhn, ``ASCII and Unicode quotation marks''.
 \url{http://www.cl.cam.ac.uk/~mgk25/ucs/quotes.html}
